<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:id="@+id/list_item"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/student_image_list_id"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@drawable/student"  />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="4dp">

            <TextView

                android:id="@+id/student_name_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="#383838"
                android:text="@string/reyes_kenji"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/student_grade_section_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="#383838"
                android:text="@string/grade_ii_st_bernadette"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/student_number_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="#383838"
                android:text="@string/lrn_001"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>