<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/student_profile_image_id"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:civ_border_color="#ffff"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:src="@drawable/student"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/student_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/reyes_kenji"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/student_no_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="14sp"
                    android:text="@string/lrn_0002" />

                <TextView
                    android:id="@+id/age_id"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/_7_years_old" />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="#979797" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:textSize="14sp"
                    android:id="@+id/grade_section_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_ii_st_bernadette" />

                <TextView
                    android:textSize="14sp"
                    android:id="@+id/contact_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_09981235678" />
            </LinearLayout>
        </LinearLayout>





        <LinearLayout
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_launcher"  />

                <TextView
                    android:layout_marginStart="4dp"
                    android:id="@+id/birthday_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="January 10, 2010"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:paddingStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_launcher"  />

                <TextView
                    android:layout_marginStart="4dp"
                    android:id="@+id/profile_gender_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Female"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher"  />

            <TextView
                android:layout_marginStart="4dp"
                android:id="@+id/address_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/_14_fruit_st_admiral_subdivision_las_pinas_city"
                android:textSize="14sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/icon_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E5988D"
                android:gravity="start"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_marginStart="4dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/mother_name_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/patricia_reyes"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mother_contact_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/_09981235678"
                        android:textColor="#fff"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="#66ADCB"
                android:gravity="start"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_marginStart="4dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/father_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/patricio_reyes"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/father_contact_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/_09981235678"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <TextView
                android:text="Subject"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />


            <View
                android:layout_width="2dp"
                android:layout_height="15dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:background="#979797" />

            <TextView
                android:text="Teacher"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/subject_teacher_list_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </LinearLayout>


    </LinearLayout>
</FrameLayout>