<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/add_profile_image_id"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:civ_border_color="#ffff"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:src="@drawable/student"
                app:civ_border_width="2dp" />

            <Button
                android:id="@+id/add_gallery_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:background="#56A8E3"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/choose_from_gallery"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#ffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/add_student_name_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/add_student_no_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/student_number" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/add_student_address_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/add_grade_section_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/grade_and_section" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:paddingLeft="4dp"
                        android:paddingTop="8dp"
                        android:text="@string/choose_age"
                        tools:ignore="NestedWeights" />


                    <Spinner
                        android:id="@+id/add_age_spinner_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1" />


                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton_male_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="2dp"
                            android:text="Male" />

                        <RadioButton
                            android:id="@+id/radioButton_female_id"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="2dp"
                            android:text="Female" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/add_tv_birthday_id"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:paddingLeft="4dp"
                        android:text="Birthday" />

                    <Button
                        android:id="@+id/add_pick_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#FFAA1F"
                        android:text="Choose Date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="#ffff"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/add_mother_name_id"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="Mother's Name" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/add_mother_contact_id"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="Enter Contact Number" />
                        </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/add_father_name_id"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="Father's Name" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/add_father_contact_id"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="Enter Contact Number" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
    </LinearLayout>

    <!--Button-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_btn_subject_advisory_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="#FFAA1F"
            android:text="@string/add_subject_and_advisory"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#ffff"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />


        <Button
            android:id="@+id/add_btn_save_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="#56A8E3"
            android:text="@string/save"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#ffff"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />


        <Button

            android:id="@+id/add_btn_delete_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="#979797"
            android:text="Cancel"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#ffff"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />


    </LinearLayout>


</LinearLayout>
    </FrameLayout>